--- a/kafka/kafka-producer/pom.xml
+++ b/kafka/kafka-producer/pom.xml
@@ -33,7 +33,7 @@
         </dependency>
         <dependency>
             <groupId>com.chat</groupId>
-            <artifactId>kafka-model</artifactId>
+            <artifactId>kafka</artifactId>
         </dependency>
         <dependency>
             <groupId>com.chat</groupId>
