--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -8,11 +8,13 @@ kafka-config:
   bootstrap-servers: localhost:19092, localhost:29092, localhost:39092
   schema-registry-url-key: schema.registry.url
   schema-registry-url: http://localhost:8081
-  topic-name: 'user-to-elastic'
+  topic-name: USER_REGISTER_KAFKA_TOPIC
   topic-names-to-create:
-    - 'user-to-elastic'
+    - USER_REGISTER_KAFKA_TOPIC
   numOfPartitions: 2
   replicationFactor: 3
+
+userRegisterKafkaTopic: USER_REGISTER_KAFKA_TOPIC
 
 spring:
   zipkin:
@@ -63,7 +65,8 @@ spring:
     bootstrap-servers: http://localhost:19092, http://localhost:29092, http://localhost:39092
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: io.confluent.kafka.serializers.KafkaAvroSerializer
+#      value-serializer: io.confluent.kafka.serializers.KafkaAvroSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
     #    consumer:
     #      group-id: kafka-to-elastic-service
     #      auto-offset-reset: earliest
@@ -112,3 +115,32 @@ logging:
 logstash:
   host: localhost
   port: 5000
+
+kafka-producer-config:
+  key-serializer-class: org.apache.kafka.common.serialization.LongSerializer
+  value-serializer-class: io.confluent.kafka.serializers.KafkaAvroSerializer
+  compression-type: snappy
+  acks: all
+  batch-size: 16384
+  batch-size-boost-factor: 100
+  linger-ms: 5
+  request-timeout-ms: 60000
+  retry-count: 5
+
+config:
+  cors:
+    mapping: /**
+    methods: GET, POST, DELETE, PUT
+    allowedCredentials: true
+    origins: http://localhost:3000
+    allowedHeaders:
+      Content-Type, content-type, x-requested-with,
+      Access-Control-Allow-Origin,
+      Access-Control-Allow-Credentials,
+      Access-Control-Allow-Headers,
+      x-auth-token, x-app-id, Origin, Accept,
+      X-Requested-With, Access-Control-Request-Method,
+      Access-Control-Request-Headers, Authorization,
+      Set-Cookie, Cookie
+    exposedHeaders:
+      Authorization, set-cookie
